src/objects/Section__c.object
<CustomObject>
    <description>Sections from WHICS</description>
    <fields>
        <fullName>Add_Dependant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Dependant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Dependants__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Dependants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_information__c</fullName>
        <description>Additional information - OMS Settings - HR</description>
        <label>Additional information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allow_HR_to_change_scale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow HR to change scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_HR_to_update_member_contact_detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow HR to update member contact detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Tier_nomination_during_join_online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Tier nomination during join online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_Product_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any Product (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates at what level the employer funds for SplitPay</description>
        <inlineHelpText>Indicates at what level the employer funds for SplitPay</inlineHelpText>
        <label>Any Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_System_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated System Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Tier_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Base Tier (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Code</label>
        <referenceTo>Broker_Code__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Commission_Formula__c</fullName>
        <formula>Broker_Code__r.Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Id__c</fullName>
        <formula>Broker_Code__r.Broker__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <formula>Broker_Code__r.Broker__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Number__c</fullName>
        <description>Broker&apos;s number from WHICS</description>
        <label>Broker Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Rebate_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Rebate Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Scale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <formula>Group__r.Opportunity__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Group__r.Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clone_of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone of</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Sections (Clone of)</relationshipLabel>
        <relationshipName>Sections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments_Emp_Sub__c</fullName>
        <label>Comments (Emp Sub)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Exc__c</fullName>
        <label>Comments (Exc)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Indicates specific employer exclusions for splitpay, e.g. product upgrade at base tier</description>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compulsory_payroll_field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compulsory payroll field?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_payroll_label__c</fullName>
        <label>Custom payroll label</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_On__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delete_Dependant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Dependant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_employee_contribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display employee contribution (Split Payment)</description>
        <label>Display employee contribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earliest_cover_commencement_date__c</fullName>
        <label>Earliest cover commencement date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_notification__c</fullName>
        <label>Email notification</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Payment__c</fullName>
        <label>Employer Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_Exc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family (Exc)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates specific employer exclusions for splitpay</description>
        <label>Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Dollar_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed Dollar (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Dollar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates at what level the employer funds for SplitPay</description>
        <inlineHelpText>Indicates at what level the employer funds for SplitPay</inlineHelpText>
        <label>Fixed Dollar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forced_Tier__c</fullName>
        <description>Indicates at what level the employer funds for SplitPay. &apos;Tier 3 - No rebate section&apos; is for marketing reference.</description>
        <inlineHelpText>Indicates at what level the employer funds for SplitPay. &apos;Tier 3 - No rebate section&apos; is for marketing reference.</inlineHelpText>
        <label>Forced Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Base Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3 - No rebate section</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_model__c</fullName>
        <label>Funding model</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SplitPay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupSectionNumber__c</fullName>
        <formula>Group__r.Group_Number__c &amp; &quot;-&quot; &amp; Section_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroupSectionNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Directory__c</fullName>
        <formula>Group__r.Group_Directory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Directory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Directory_todel__c</fullName>
        <description>&quot;The clients join online link
eg guhealth.com.au/microsoft&quot;</description>
        <inlineHelpText>&quot;The clients join online link
eg guhealth.com.au/microsoft&quot;</inlineHelpText>
        <label>Group Directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>Group__r.Group_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Section_Number__c</fullName>
        <description>Group Number - Section Number</description>
        <formula>Group__r.Group_Number__c &amp; &quot;-&quot; &amp; Section_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Section Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Status__c</fullName>
        <formula>Group__r.Is_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of parent group</inlineHelpText>
        <label>Group Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Version__c</fullName>
        <formula>Group__r.Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Add_Dependants__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Add Dependants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Additional_information__c</fullName>
        <label>HR Additional information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HR_Allow_HR_to_change_scale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Allow HR to change scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Allow_HR_to_update_member_contact_det__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Can update member contact details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Allow_Tier_nomin_during_join_online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Allow Tier nomin during join online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Change_Rebate_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Change Rebate Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Change_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Change plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Delete_dependants__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Delete dependants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Display_employee_contribution_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display employee contribution (Split Payment)</description>
        <inlineHelpText>Display employee contribution (Split Payment)</inlineHelpText>
        <label>HR Display employee contribution (Split)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Earliest_cover_commencement_date__c</fullName>
        <label>HR Earliest cover commencement date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Features_Add_Dependant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Features Add Dependant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Features_Change_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Features Change Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Features_Change_Scale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Features Change Scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Features_Delete_Dependant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Features Delete Dependant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_HR_email_notifications__c</fullName>
        <label>HR email notifications</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HR_Join_online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Join online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Join_online_in_Retrospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Join online in Retrospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Terminate_members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Terminate members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_View_Rebate_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR View Rebate Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_email_notifications__c</fullName>
        <label>HR email notifications</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_Employer_prepaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Employer prepaid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_to_Join_Transfer_toDel__c</fullName>
        <description>Indicates how a member applies for membership.</description>
        <label>How to Join/Transfer</label>
        <picklist>
            <picklistValues>
                <fullName>Join Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application or Join Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - return to HR/Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - return to HR/Employer or GU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inpatriate_SplitPay_Cover_Guide_Wording__c</fullName>
        <label>Inpatriate-SplitPay Cover Guide Wording</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsPublishWizard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Publish Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Join_Online_HR_access_code__c</fullName>
        <description>Access code to log into group URL (OMS) - HR admin.</description>
        <label>Join Online - HR access code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Join_Online_URL__c</fullName>
        <description>The clients join online link
eg guhealth.com.au/microsoft</description>
        <label>Join Online URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Join_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Join Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Join_Online_access_code__c</fullName>
        <description>The Join Online/Web access code. Appears in the book.</description>
        <inlineHelpText>The Join Online/Web access code. Appears in the book.</inlineHelpText>
        <label>Web Access Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Join_Online_available__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Set to True when the customer can join online.</description>
        <label>Join Online available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Join_Online_link__c</fullName>
        <description>The clients join online link. eg guhealth.com.au/microsoft.</description>
        <label>Join Online link</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Join_online_in_Retrospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Join online in Retrospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LHC_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LHC (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LHC_Exc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LHC (Exc)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make_Rebate_registration_mandatory_durin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebate registration mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Payment__c</fullName>
        <label>Member Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nominate_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nominate Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nominated_Tier_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nominated Tier (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nominated_Tier_Exc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nominated Tier (Exc)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OMS_Activation_Date__c</fullName>
        <description>Indicates date OMS was activated</description>
        <inlineHelpText>Indicates date OMS was activated</inlineHelpText>
        <label>OMS Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OMS_Disabled_Date__c</fullName>
        <description>Indicates date OMS was disabled</description>
        <inlineHelpText>Indicates date OMS was disabled</inlineHelpText>
        <label>OMS Disabled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OMS_status__c</fullName>
        <description>Indicates if OMS is active for the Section</description>
        <inlineHelpText>Indicates if OMS is active for the Section</inlineHelpText>
        <label>OMS status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Use_Only_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Office Use Only Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Employer_exclusions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Employer_subsidy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Exc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other (Exc)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates specific employer exclusions for splitpay</description>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_frequency_Employer__c</fullName>
        <label>Payment frequency - Employer</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_frequency_Member__c</fullName>
        <label>Payment frequency - Member</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly/ Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly/Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly/Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly/Fortnightly/Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payroll_Contacts__c</fullName>
        <description>List of email addresses for payroll contacts</description>
        <inlineHelpText>List of email addresses for payroll contacts</inlineHelpText>
        <label>Payroll Contacts</label>
        <length>257</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payroll_field_compulsory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payroll field compulsory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage_or_Fixed_amount__c</fullName>
        <label>Percentage or Fixed amount</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Address__c</fullName>
        <label>Postal Address</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Postal_City__c</fullName>
        <label>Postal City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Postcode__c</fullName>
        <label>Postal Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_State__c</fullName>
        <label>Postal State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Street__c</fullName>
        <label>Postal Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepaid_to__c</fullName>
        <label>Prepaid to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Upgrade_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Upgrade (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Upgrade_Exc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Upgrade (Exc)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates at what level the employer funds for SplitPay</description>
        <inlineHelpText>Indicates at what level the employer funds for SplitPay</inlineHelpText>
        <label>Product Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_SP_Inpatriate_Wording__c</fullName>
        <label>Publish SP Inpatriate Wording</label>
        <picklist>
            <picklistValues>
                <fullName>Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book and App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publish_SP_Resident_Wording__c</fullName>
        <label>Publish SP Resident Wording</label>
        <picklist>
            <picklistValues>
                <fullName>Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book and App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Rise_Renewal_Correspondence__c</fullName>
        <label>Rate Rise / Renewal Correspondence</label>
        <picklist>
            <picklistValues>
                <fullName>Rebate - DD form required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate - Rate increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate rise and rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate rise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid- March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SplitPay Transitiion - DD form required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebate_mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebate mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Register_for_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Register for Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Register_for_rebate_during_join_online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Register for rebate(during join online)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Name_HICAPS__c</fullName>
        <label>Section Name - HICAPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Number__c</fullName>
        <description>The number allocated to the section.</description>
        <externalId>true</externalId>
        <label>Section Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_name_OMS__c</fullName>
        <description>Section name SPECIFIC to OMS.</description>
        <label>Section name - OMS</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharedKey__c</fullName>
        <formula>Group__r.Group_Number__c &amp; &quot;s&quot; &amp; Section_Number__c</formula>
        <label>Shared Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Single_Emp_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single (Emp Sub)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Arrangements__c</fullName>
        <description>Comments about the client, agreement/process based</description>
        <label>Special Arrangements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Features__c</fullName>
        <description>Comments about the section features/ product based</description>
        <label>Special Features</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SplitPay_Arrangements__c</fullName>
        <description>Capture the intention of the SP arrangements at  section level (this may be different to how set up in whics)</description>
        <inlineHelpText>Capture the intention of the SP arrangements at  section level (this may be different to how set up in whics)</inlineHelpText>
        <label>SplitPay Arrangements</label>
        <length>770</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>